Added logo, center, and postgrad program name to the cover. Closes #15

--- a/setup/ufscthesisx.sty
+++ b/setup/ufscthesisx.sty
@@ -617,10 +617,16 @@
 
         \center
         {%
+            \includegraphics[height=2.54cm,width=1.84cm]{setup/pictures/logo_ufsc.png}
+
             \ABNTEXchapterfont\ufsccaptionsize\MakeTextUppercase{\imprimirinstituicao}
-            \par\MakeTextUppercase{\imprimirautor}
+            \par\MakeTextUppercase{\imprimircentro}
+            \par\MakeTextUppercase{\imprimirprograma}
         }
 
+        \vfill
+
+        {\ufsccaptionsize\imprimirautor}
 
         \vfill
         {%
